[gd_scene load_steps=30 format=2]

[ext_resource path="res://entities/enemies/alarmcrook.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/alarmcrook.png" type="Texture" id=2]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=3]
[ext_resource path="res://fsm/states/approach_target.gd" type="Script" id=4]
[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://fsm/states/charge.gd" type="Script" id=6]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=7]
[ext_resource path="res://fsm/states/state.gd" type="Script" id=8]
[ext_resource path="res://fsm/states/ac_ring.gd" type="Script" id=9]
[ext_resource path="res://fsm/states/stunned.gd" type="Script" id=10]
[ext_resource path="res://pieces/wall_detector.tscn" type="PackedScene" id=11]
[ext_resource path="res://fsm/states/ac_charge.gd" type="Script" id=12]
[ext_resource path="res://fsm/states/ac_jump.gd" type="Script" id=13]
[ext_resource path="res://entities/enemies/data/alarmcrook.tres" type="Resource" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 14.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 4, 16 )

[sub_resource type="CircleShape2D" id=14]
radius = 64.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "charge"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=4]
resource_name = "dazed"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=7]
resource_name = "post_attacc"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=8]
resource_name = "post_ring"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=9]
resource_name = "pre_attacc"
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 48 ]
}

[sub_resource type="Animation" id=10]
resource_name = "pre_ring"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=11]
resource_name = "ring"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="alarmcrook" type="KinematicBody2D"]
script = ExtResource( 1 )
flip_path = NodePath("flippable")
title = "Alarm Crook"
subtitle = "Bane of Sleep"
acceleration = 1500.0
speed = 150.0
max_hp = 20.0
saving_enabled = false
boss_theme = "timeforbattle"
enemy_data = ExtResource( 14 )

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="flippable" type="Node2D" parent="."]
use_parent_material = true

[node name="sprite" type="Sprite" parent="flippable"]
use_parent_material = true
texture = ExtResource( 2 )
offset = Vector2( 0, -32 )
hframes = 8
vframes = 7

[node name="hurtbox" parent="flippable" instance=ExtResource( 5 )]
knockback = Vector2( 500, -400 )

[node name="hitbox" type="CollisionPolygon2D" parent="flippable/hurtbox"]
visible = false
polygon = PoolVector2Array( -48, -40, -24, -56, 0, -61, 32, -56, 56, -32, 64, 0, 56, 8, 16, 8 )

[node name="entity_detector" parent="flippable" instance=ExtResource( 7 )]
position = Vector2( 32, -16 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/entity_detector"]
visible = false
shape = SubResource( 13 )

[node name="chargebox" parent="flippable" instance=ExtResource( 5 )]
knockback = Vector2( 600, 200 )

[node name="hitbox" type="CollisionPolygon2D" parent="flippable/chargebox"]
visible = false
polygon = PoolVector2Array( 8, -8, 24, 0, 8, 8 )

[node name="wall_detector" parent="flippable" instance=ExtResource( 11 )]
position = Vector2( 8, 0 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/wall_detector"]
visible = false
shape = SubResource( 15 )

[node name="ringbox" parent="." instance=ExtResource( 5 )]

[node name="hitbox" type="CollisionShape2D" parent="ringbox"]
visible = false
shape = SubResource( 14 )

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/charge = SubResource( 3 )
anims/dazed = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/post_attacc = SubResource( 7 )
anims/post_ring = SubResource( 8 )
anims/pre_attacc = SubResource( 9 )
anims/pre_ring = SubResource( 10 )
anims/ring = SubResource( 11 )
anims/walk = SubResource( 12 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 3 )
animator_path = NodePath("../animator")

[node name="idle" type="Node" parent="fsm"]
script = ExtResource( 4 )
idle_animation = "idle"
walk_animation = "walk"
pause_duration = 0.6

[node name="attacc" type="Node" parent="fsm"]
script = ExtResource( 6 )
animation = "pre_attacc"
auto_proceed = "idle"
recover_animation = "post_attacc"

[node name="pre_ring" type="Node" parent="fsm"]
script = ExtResource( 8 )
animation = "pre_ring"
auto_proceed = "ring"

[node name="ring" type="Node" parent="fsm"]
script = ExtResource( 9 )
animation = "ring"
auto_proceed = "post_ring"
duration = 2.0

[node name="post_ring" type="Node" parent="fsm"]
script = ExtResource( 8 )
animation = "post_ring"
auto_proceed = "idle"

[node name="charge" type="Node" parent="fsm"]
script = ExtResource( 12 )
animation = "charge"
auto_proceed = "dazed"

[node name="dazed" type="Node" parent="fsm"]
script = ExtResource( 10 )
animation = "dazed"
auto_proceed = "idle"
duration = 1.2

[node name="jump" type="Node" parent="fsm"]
script = ExtResource( 13 )
animation = "jump"
auto_proceed = "idle"

[node name="attack_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="activated" from="flippable/entity_detector" to="." method="_on_entity_detector_activated"]
[connection signal="activated" from="flippable/wall_detector" to="." method="_on_wall_detector_activated"]
[connection signal="entered" from="fsm/idle" to="." method="_on_idle_entered"]
[connection signal="activated" from="fsm/attacc" to="." method="_on_attacc_activated"]
[connection signal="entered" from="fsm/attacc" to="." method="_on_attacc_entered"]
[connection signal="entered" from="fsm/ring" to="." method="_on_ring_entered"]
[connection signal="exited" from="fsm/ring" to="." method="_on_ring_exited"]
[connection signal="entered" from="fsm/charge" to="." method="_on_charge_entered"]
[connection signal="exited" from="fsm/charge" to="." method="_on_charge_exited"]
[connection signal="entered" from="fsm/dazed" to="." method="_on_dazed_entered"]
[connection signal="entered" from="fsm/jump" to="." method="_on_jump_entered"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
